[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
name = "pakler"
authors = [
    {name="Vincent Mallet", email="vmallet@gmail.com"},
]
license = {text = "MIT License"}
description = "Manipulate .PAK firmware files from Swann and Reolink"
readme = "README.md"
requires-python = ">=3.6"
keywords = ["swann", "reolink", "firmware", "pak"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dynamic = ["version"]

[project.scripts]
pakler = "pakler.__main__:main"

[project.urls]
Homepage = "https://github.com/vmallet/pakler"
Issues = "https://github.com/vmallet/pakler/issues"

[tool.setuptools]
packages = ["pakler"]

[tool.setuptools_scm]
write_to = "pakler/_version.py"